--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = [
     {name = "Madeeha-Anjum", email = "maadeeeehaa@gmail.com"},
 ]
 dependencies = [
-    "fastapi[standard]>=0.112.1",
+    "fastapi>=0.112.2",
     "uvicorn[standard]>=0.30.6",
+    "weasyprint>=62.3",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
